--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,19 @@ body {
 }
 }
 
+
+.container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1300px;
+}
+
+
+
+
+
 /* 3. NAVBAR */
 .navbar {
   background-color: var(--secondary-color);
@@ -98,14 +111,37 @@ p {
   color: #ffffff;
 }
 
-.hero-section {
+.hero {
+  position: relative;
+  width: 100%;
   min-height: 100vh;
-  padding-top: 80px;
-  background-image: url('imagenes/fondo\ 2.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  max-width: 1300px; /* o lo que quieras */
+  padding: 0 30px;
+  margin: 0 auto;
+}
+/* 4. HERO */
+
+
+  
 
 /* 4. HERO Detalle */
 .hero-sectiondetalle {
@@ -115,7 +151,66 @@ p {
   background-size: cover;
   background-position: bottom center;
   background-repeat: no-repeat;
+   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
+
+.hero-contentdetalle {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  max-width: 1300px; /* o lo que quieras */
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+
+
+.bg-geekswap{
+  min-height: 100vh;
+  padding-top: 80px;
+  background-image: url('imagenes/Fondo\ 6.png');
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+
+/* 4. GEEKSWAP */
+.geekswap {
+  min-height: 100vh;
+  padding-top: 80px;
+  background-image: url('imagenes/Fondo\ 6.png');
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.geekswap-content {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  max-width: 1300px; /* o lo que quieras */
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
 
 
 
@@ -206,14 +301,6 @@ section h2::after {
   margin: 20px auto 0;
 }
 
-.bg-geekswap {
-  background-image: url('imagenes/Fondo\ 6.png'); 
-  background-size: cover;
-  background-position: top center;
-  background-repeat: no-repeat;
-  padding-top: 80px;       
-  padding-bottom: 80px;   
-}
 
 .bg-suscripciones2{
   background-image: url('imagenes/Fondo\ 7.png'); 
@@ -224,11 +311,12 @@ section h2::after {
   padding-bottom: 80px;   
 }
 .bg-numeros{
-  background-image: url('imagenes/Fondo\ 8.png'); 
+  background-image: url('imagenes/fondo\ 2.png'); 
   background-size: cover;
-  background-position: bottom center;
+  background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 80px;   
+  padding-top: 100px;
+  padding-bottom: 100px;  
 }
 
 
@@ -412,7 +500,6 @@ img.rounded-circle {
 
 .container .row img:hover {
   transform: scale(1.05);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* ============================== */
